--- a/main.css
+++ b/main.css
@@ -3,3 +3,25 @@
     width: 250px;
     border: 1px solid coral;
 }
+
+.color-block {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+}
+
+.blue {
+    background: blue;
+}
+
+.green {
+    background: green;
+}
+
+.red {
+    background: red;
+}
+
+.yellow {
+    background: yellow;
+}
