--- a/main.css
+++ b/main.css
@@ -5,8 +5,8 @@
 }
 
 .color-block {
-    height: 20px;
-    width: 20px;
+    height: 50px;
+    width: 50px;
     display: inline-block;
 }
 
@@ -24,4 +24,8 @@
 
 .yellow {
     background: yellow;
+}
+
+.transform {
+    border-radius: 150px;
 }
